# AdSol

./: README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
backend/smart-contracts/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json
backend/smart-contracts/programs/ad-marketplace/: Cargo.toml
backend/smart-contracts/programs/ad-marketplace/src/: lib.rs
backend/smart-contracts/programs/payments/: Cargo.toml
backend/smart-contracts/programs/payments/src/: lib.rs
backend/smart-contracts/tests/: smart-contracts.ts
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/advertiser/: page.tsx
frontend/app/dashboard/advertiser/ad-library/: page.tsx
frontend/app/dashboard/advertiser/campaigns/: page.tsx
frontend/app/dashboard/publisher/: page.tsx
frontend/app/dashboard/publisher/ad-slots/: page.tsx
frontend/app/dashboard/publisher/ad-slots/create/: page.tsx
frontend/app/home/: page.tsx
frontend/components/: Header.tsx  RoleSelection.tsx  RoleSwitcher.tsx
frontend/components/advertiser/: AdCreationForm.tsx  AdList.tsx  AdvertiserDashboard.tsx  SlotFilterForm.tsx  SlotList.tsx
frontend/components/publisher/: AdSlotForm.tsx  AdSlotList.tsx
frontend/components/ui/: wallet-button.tsx  wallet-modal.tsx
frontend/contexts/: RoleContext.tsx  WalletContext.tsx
frontend/hooks/: useWalletConnection.ts
frontend/utils/: ad_marketplace.json  ad_marketplace.ts  payments.json  payments.ts  solana-program.ts
