[workspace]
members = [
    "programs/ad-marketplace",
    "programs/payments",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Resolve dependency conflicts - align all Solana deps with Anchor 0.31.0
[workspace.dependencies]
anchor-lang = "=0.31.0"